# Portfolio

./: .gitignore  README.md  global.gitignore
backend/: .env.example  Dockerfile  list_gemini_models.py  list_models.py  migrate_to_supabase.py  pyproject.toml
backend/app/: __init__.py  main.py  models.py  routes.py  supabase_client.py
backend/app/data/: projects.json  resume.json  skills.json
backend/tests/: test_api.py
frontend/: .env.example  debug_models.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: Chat.tsx  GenerativeUI.tsx  MarkdownText.tsx
frontend/components/ui/: EducationCard.tsx  ExperienceCard.tsx  ExperienceModal.tsx  ProfileModal.tsx  ProjectCard.tsx  ProjectModal.tsx  ReferenceCard.tsx  SkillBadge.tsx
frontend/lib/: types.ts
